<resources>
    <string name="app_name">QuanLyNhaHangDoUong</string>
    <string name="title_book">Đặt bàn</string>
    <string name="title_menu">Đồ uống</string>
    <string name="title_statistical">Thống kê</string>
    <string name="add_drink">Thêm món</string>
    <string name="done">Xong</string>
    <string name="no_menu">Chưa có đồ uống</string>
    <string name="pay">Thanh toán</string>
    <string name="update_menu">Cập nhật bàn</string>
    <string name="save">Lưu món</string>
    <string name="name_drink">Tên đồ uống</string>
    <string name="price">Giá</string>
    <string name="update">Cập nhật</string>
    <string name="delete">Xóa</string>
    <string name="add">Thêm</string>
    <string name="update_drink">Cập nhật đồ uống</string>
    <string name="print_order">Xuất hóa đơn</string>
    <string name="id_bill">Mã hóa đơn: %s</string>
    <string name="not_user_name">Tài khoản không được để trống</string>
    <string name="not_password">Mật khẩu trống</string>
    <string name="user_name">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="setting">Thiết lập</string>
    <string name="type_student_code">Nhập mã nhân viên</string>
    <string name="detail_student">Chi tiết nhân viên</string>
    <string name="student_code">Mã nhân viên: %s</string>
    <string name="student_name">Tên nhân viên: %s</string>
    <string name="student_phone">Số điện thoại: %s</string>
    <string name="add_student">Thêm nhân viên</string>
    <string name="type_student_name">Nhập tên nhân viên</string>
    <string name="type_student_birthday">Ngày sinh</string>
    <string name="type_phone">Nhập sdt</string>
    <string name="exist_student">Mã nhân viên đã tồn tại</string>
    <string name="add_student_success">Thêm nhân viên thành công</string>
    <string name="employee">Nhân viên</string>
</resources>