<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivBack"
            android:tint="@color/gray"
            android:layout_width="40dp"
            android:layout_marginLeft="12dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_height="40dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="Cập nhật đồ uống"
            android:textColor="@color/design_default_color_primary"
            android:textSize="17sp"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:id="@+id/tilUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tipDrinkName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_drink"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:id="@+id/tilPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tipPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_margin="12dp"
            android:background="@drawable/bg_radius_blue"
            android:gravity="center"
            android:id="@+id/tvUpdate"
            android:text="@string/update"
            android:textColor="@color/design_default_color_primary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_margin="12dp"
            android:background="@drawable/bg_radius_red"
            android:gravity="center"
            android:id="@+id/tvDelete"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_margin="12dp"
        android:background="@drawable/bg_radius_blue"
        android:gravity="center"
        android:id="@+id/tvAdd"
        android:text="@string/add"
        android:textColor="@color/design_default_color_primary"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>


</androidx.appcompat.widget.LinearLayoutCompat>