<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.home.BookFragment">
    <RelativeLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivBack"
            android:tint="@color/design_default_color_primary"
            android:layout_width="40dp"
            android:layout_marginLeft="12dp"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_height="40dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            tools:text="Bàn 1"
            android:textColor="@color/design_default_color_primary"
            android:textSize="17dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/design_default_color_primary"
            android:textSize="17dp" />
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:id="@+id/rlData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView
            android:orientation="vertical"
            android:padding="6dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:id="@+id/rvDrink"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lnNoData"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/ic_baseline_local_drink_24"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_alignParentRight="true"
                android:text="@string/no_menu"
                android:textColor="@color/design_default_color_primary"
                android:textSize="17dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/flbAddDrink"
            app:tint="@android:color/white"
            android:src="@drawable/ic_add"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
           android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>




    <androidx.appcompat.widget.AppCompatTextView
        android:layout_margin="12dp"
        android:background="@drawable/bg_radius_blue"
        android:gravity="center"
        android:id="@+id/tvPay"
        android:text="@string/pay"
        android:textColor="@color/design_default_color_primary"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>